--- a/Course_6_Statistical_inference/statistical_inference_assignment/report_1.Rmd
+++ b/Course_6_Statistical_inference/statistical_inference_assignment/report_1.Rmd
@@ -11,7 +11,7 @@ library(ggplot2)
 library(kableExtra)
 ```
 
-In this part of the final assignmens we'll investigate the exponential distribution and find out if the Central Limit Theorem works for it. We'll draw 1000 samples of size 40 from the distribution and compair theit mean and variance distributions to the theoretical values.
+In this part of the final assignmens we'll investigate the exponential distribution and find out how the Central Limit Theorem applies for it. We'll draw 1000 samples of size 40 from the distribution and compair theit mean and variance distributions to the theoretical values.
 
 \section{Part 1. Central limit theorem}
 
@@ -26,7 +26,7 @@ samples <- matrix(rexp(nosim*n, rate = rate), nosim)
 sample_means <- apply(samples, 1, mean)
 ```
 
-According to the Central Limit Theorem, the distribution of the sample means is approximated by the normal distribution with parameters $N(1/\lambda, \frac{1}{\lambda\cdot\sqrt{n}})$, where $\lambda=0.2$, $n = 40$.
+According to the Central Limit Theorem, the distribution of the sample means is approximated by the normal distribution with parameters $N(1/\lambda, \frac{1}{\lambda^2\cdot n})$, where $\lambda=0.2$, $n = 40$.
 Let's calculate values of PDF for this distribution:
 
 ```{r}
